feat: add role precedence middleware
